<resources>
    <string name="app_name">client</string>
    <string name="activity_main_view">просмотреть базу данных</string>
    <string name="activity_main_delete_label">удалить запись</string>
    <string name="activity_main_edit_label">изменить запись</string>
    <string name="activity_main_add_label">добавить звпись</string>
    <string name="activity_record_mode_label_placeholder">uknown mode</string>
    <string name="activity_record_accept_placeholder">confirm</string>
    <string name="activity_record_field_id_label">id</string>
    <string name="activity_record_field_id_editable_placeholder">введите id записи</string>
    <string name="activity_record_field_id_fixed_placeholder">#</string>
    <string name="activity_record_field_manufacture_label">производитель</string>
    <string name="activity_record_field_placeholder">#value#</string>
    <string name="activity_record_field_model_label">марка</string>
    <string name="activity_record_field_year_label">год производства</string>
    <string name="activity_record_mode_label_delete">удалить запись</string>
    <string name="activity_record_mode_label_edit">изменить запись</string>
    <string name="activity_record_mode_label_add">добавить запись</string>
    <string name="activity_record_edit_dialog_title">введите id</string>
    <string name="activity_record_edit_dialog_message">введите id записи, которую хотите изменить</string>
    <string name="activity_record_field_manufacture_placeholder">введите производителя</string>
    <string name="activity_record_field_model_placeholder">введите марку авто</string>
    <string name="activity_record_field_year_placeholder">введите год авто</string>
    <string name="activity_record_accept_delete">удалить</string>
    <string name="activity_record_accept_edit">изменить</string>
    <string name="activity_record_accept_add">добавить</string>
</resources>
